# glorp

./: .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  build.rs  esbuild.config.mjs  eslint.config.mjs  index.html  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postbuild.js  styles.css
crates/render-dll/: Cargo.toml
crates/render-dll/src/: lib.rs
crates/webview-dll/: Cargo.toml
crates/webview-dll/src/: lib.rs
resources/: THIRD_PARTY_LICENSES  client.rc  glorp-manifest.rc  glorp-setup-x86_64.wxs  glorp.exe.manifest  installer_script.nsi  installer_script.wxs  legacy_installer.iss
resources/Output/: glorp-setup-x86_64.msi
resources/WebView2Runtime/: 133.0.3065.92.manifest  msedge_100_percent.pak  msedge_200_percent.pak
resources/WebView2Runtime/Locales/: en-US.pak
src/: blocklist.rs  cSettings.json  config.rs  constants.rs  inject.rs  installer.rs  main.rs  swapper.rs  userscripts.rs  utils.rs  window.rs
src/frontend/: accountManager.js  cSettings.json  hpEnemyCounter.js  main.js  notifications.js  settings.js  settingsMenu.js  utils.js
src/frontend/components/: accountManager.html  base.css  betterChat.css  changelog.html  clean.css  menuTimer.css  notification.html  rankProgress.css
src/frontend/components/changelog/: changelog.css  changelog.html
src/frontend/components/queue/: index.html
src/frontend/modules/: ClaimAllFromBattlePass.js  accountManager.js  args.js  betterChat.js  betterChatChannels.js  bpClaimAll.js  changelog.js  cpuAffinity.js  externalQueue.js  fixes.js  frameCap.js  hpEnemyCounter.js  hsSound.js  importSettings.js  notifications.js  rankProgress.js  realPing.js  showPing.js
src/modules/: blocklist.rs  flaglist.rs  inject.rs  installer.rs  lifecycle.rs  ping.rs  priority.rs  swapper.rs  userscripts.rs
