[package]
name = "glorp"
version = "0.3.2"
description = "krunker"
authors = ["slav"]
edition = "2024"

[workspace]
members = ["crates/*"]

# https://doc.rust-lang.org/rustc/codegen-options/index.html
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
debug = false

[dependencies]
windows = { version = "0.59.*", features = [
       "Win32_UI_WindowsAndMessaging",
       "Win32_UI_Input_KeyboardAndMouse",
       "Win32_UI_Shell",
       "Win32_System_Com",
       "Win32_System_Com_StructuredStorage",
       "Win32_System_LibraryLoader",
       "Win32_System_ProcessStatus",
       "Win32_System_Threading",
       "Win32_Foundation",
       "Win32_Graphics_Gdi",
       "Win32_Devices_HumanInterfaceDevice",
       "Win32_System_Diagnostics_ToolHelp",
       "Win32_System_SystemServices",
       "Win32_System_Memory",
       "Win32_System_Diagnostics_Debug",
       "Win32_Security",
       "Win32_UI_Accessibility",
       "Win32_Graphics",
       "Win32_Graphics_Direct3D",
       "Win32_Graphics_Dxgi",
       "Win32_Graphics_Dxgi_Common",
       "Win32_Graphics_Direct3D11",
       "Win32_Graphics_CompositionSwapchain",
       "Win32_Storage_FileSystem",
       "Win32_System_Performance",
       "Win32_Security_Authorization",
] }

webview2-com = { version = "0.35.*", default-features = false }
ureq = { version = "3.0.*", features = ["rustls"], default-features = false }
serde = { version = "1.0.*", features = ["derive"], default-features = false }
regex = { version = "1.11.*", features = [
       "std",
       "perf",
       "perf-dfa-full",
       "unicode-perl",
], default-features = false }
serde_json = "1.0.*"
once_cell = "1.20.*"
walkdir = "2.5.*"
semver = "1.0.*"
discord-rich-presence = "0.2.5"

[build-dependencies]
embed-resource = "3.0.*"
