[package]
name = "glorp"
version = "0.7.4"
description = "krunker"
authors = ["slav"]
edition = "2024"

[workspace]
members = ["crates/*"]

# https://doc.rust-lang.org/rustc/codegen-options/index.html
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
debug-assertions = true
strip = "symbols"

[features]
packaged = []
editor-ignore = []

[dependencies]
windows = { version = "0.61.*", features = [
       "Win32_UI_WindowsAndMessaging",
       "Win32_UI_Input_KeyboardAndMouse",
       "Win32_UI_Shell",
       "Win32_System_Com",
       "Win32_System_Com_StructuredStorage",
       "Win32_System_LibraryLoader",
       "Win32_System_ProcessStatus",
       "Win32_System_Threading",
       "Win32_Foundation",
       "Win32_Graphics_Gdi",
       "Win32_System_Diagnostics_ToolHelp",
       "Win32_System_SystemServices",
       "Win32_System_Memory",
       "Win32_System_Diagnostics_Debug",
       "Win32_Storage_FileSystem",
       "Win32_Security_Authorization",
       "Win32_System_DataExchange",
] }

webview2-com = { version = "0.38.*", default-features = false }
ureq = { version = "3.1.*", features = ["rustls"], default-features = false }
serde = { version = "1.0.*", features = ["derive"], default-features = false }
regex = { version = "1.12.*", features = ["std", "perf", "perf-dfa-full", "unicode-perl"], default-features = false }
semver = "1.0.*"
serde_json = "1.0.*"
once_cell = "1.21.*"
discord-rich-presence = "1.0.*"
ping-rs = "0.1.*"
dns-lookup = "3.0.*"


[build-dependencies]
embed-resource = "3.0.*"
