[package]
name = "render-dll"
version = "0.1.0"
edition = "2024"

[lib]
name = "render"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.59.*", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_CompositionSwapchain",
]}
minhook = "0.7.*"